--- a/pages/tabBar/index/index.wxs
+++ b/pages/tabBar/index/index.wxs
@@ -1,5 +1,8 @@
 
 var resolveTime = function (time, full) {
+    if (!time) {
+        return ''
+    }
     var exp = getRegExp('-', 'g')
     var temp = time.replace(exp, '/')
     var d = getDate(temp)
