--- a/pages/apply/course/lesson-play/lesson-play.wxss
+++ b/pages/apply/course/lesson-play/lesson-play.wxss
@@ -92,7 +92,7 @@
 }
 .play-record .recordUser .user-image{
     width: 65rpx; height: 65rpx; border-radius: 200rpx; position: relative; margin-left: -10rpx;
-    box-shadow: 0 8rpx 15rpx rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8rpx 25rpx rgba(0, 0, 0, 0.06); background-color: white;
 }
 
 /*play-operration*/
@@ -109,19 +109,26 @@
 
 .play-progress{  height: 8vh; display: flex; padding: 0 30px; align-items: center; font-family: -apple-system-font, "Helvetica Neue", sans-serif; font-size: 12px;}
 .play-progress ._slider{ flex: 1;}
-.play-console{ display: flex; justify-content: space-around; align-items: center; height: 12vh; background-color: #e9e9e9; position: relative; }
-.play-console ._uniterm{ text-align: center; display: inline-block; width: 120rpx; height: 120rpx; line-height: 120rpx; color: #333;}
+.play-console{ display: flex; justify-content: space-around; align-items: center; height: 12vh; background-color: #e9e9e9; position: relative; z-index: 100; }
+.play-console ._uniterm{
+    text-align: center;
+    display: inline-block;
+    width: 120rpx;
+    height: 120rpx;
+    line-height: 120rpx;
+    color: #333;
+    position: relative;
+}
 .play-console ._uniterm._panel{ width: 140rpx;}
 .play-console ._uniterm text{  font-size: 34rpx;}
-.play-console ._uniterm._play{ color: black; text-align: center; margin: 0 40rpx;
-    /*box-shadow: 0px 6px 20px rgba(237, 30, 84, 0.4);*/
+.play-console ._uniterm._play{
+    color: black;
+    margin: 0 40rpx;
 }
-/*.play-console ._uniterm._play:active{ background: rgba(237, 30, 84, 0.6);}*/
-.play-console ._uniterm.nofocus{ color: rgba(0, 0, 0, 0.3)}
+.play-console ._uniterm.noFocus{ color: rgba(0, 0, 0, 0.3)}
 .play-console ._play text{ display: inline-block;
     font-size: 40rpx;
 }
-
 .play-console ._progress{
     position: absolute; width: 100%; left: 0; top: -15rpx; z-index: 10;
 }
@@ -135,9 +142,30 @@
 /* tab content */
 .catalog-single{ text-align: left; counter-increment: section; }
 .catalog-single.desabled{ color: #ababab; }
-.catalog-single>._title{ padding: 20rpx 40rpx 20rpx 70rpx; color: #7e7e7e; display: block; font-size: 28rpx; position: relative; overflow: hidden; text-overflow:ellipsis; white-space: nowrap;}
-.catalog-single>._title::after{ content: counter(section) ; position: absolute; font-size: 32rpx; z-index: 1; left: 30rpx;  top: 50%; transform: translateY(-50%); color: #999; font-family: Arial;}
-.catalog-single>._title text{ color: #733429; font-size: 38rpx; margin-top: -4rpx;  vertical-align: middle; display: inline-block;}
+.catalog-single>._title{
+    padding: 20rpx 40rpx 20rpx 70rpx;
+    color: #7e7e7e; display: flex;
+    align-items: center;
+    font-size: 28rpx;
+    position: relative;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;}
+.catalog-single>._title::after{
+    content: counter(section) ;
+    position: absolute;
+    font-size: 32rpx;
+    z-index: 1;
+    left: 30rpx;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #999;
+    font-family: Arial;
+}
+.catalog-single>._title .iconfont{
+    color: #733429;
+    font-size: 38rpx;
+}
 .catalog-single>._list{ position: relative;  font-size: 28rpx;}
 .catalog-single>._list .__dataName{overflow: hidden; text-overflow:ellipsis; white-space: nowrap; padding: 20rpx 100rpx 20rpx 70rpx;}
 .catalog-single>._list .__dataType{ position: absolute; right: 20rpx; top: 50%; transform: translateY(-50%);}
@@ -152,17 +180,7 @@
 .draft-frame>._insert.android{
     background: rgba(255, 255, 255, 0.9);
 }
-/*.draft-frame-s{ padding: 20rpx 40rpx; font-size: 44rpx; line-height: 1.4;}
-.draft-frame-fixTitle{ padding-left: 70rpx; text-align: left; font-size: 30rpx;}
-.draft-frame-fixTitle text._l{position: relative; color: #666;}
-.draft-frame-fixTitle text._l::after{position: absolute; content: ""; left: -30rpx; top: 10%; height: 80%; width: 8rpx; background-color: #ed1e54;}
-.draft-frame-fixTitle text._r{ display: inline-block; padding: 20rpx;}
-.draft-frame-slider{ padding: 15rpx 0rpx; display: flex; align-items: center;}
-.draft-frame-slider slider{ flex: 1;}
-.draft-frame-slider>text{ color: #666666; font-size: 28rpx; font-family: -apple-system-font, "Helvetica Neue", sans-serif;}
-.draft-frame-slider ._controler{padding: 15rpx 25rpx 15rpx 30rpx; color: black;}
-.draft-frame-slider ._controler .iconfont{ font-size: 40rpx;}
-.draft-frame-slider ._play{ padding: 15rpx 25rpx; color: #000;}*/
+
 /*progress*/
 .progress-wrap{position: relative; width: 200px;height:200px;border-radius: 50%;background: none;text-align: center;}
 .progress-wrap .right-part{width:200px;height: 200px;position: absolute;clip:rect(0px,auto,auto,100px)}
@@ -172,13 +190,20 @@
 .progress-wrap.opacity{ position: absolute; z-index: 20; left: 0; top: 0;}
 .progress-wrap.opacity .left, .progress-wrap.opacity .right{background: rgba(115, 52, 41, 0.25);}
 
+/*catalog-frame*/
 .catalog-frame{
-    position: fixed; left: 0; right: 0;  bottom: 0; z-index: 2000;width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2000;
 }
-.catalog-frame>._insert{ border-radius: 10px 10px 0 0; box-shadow: 0 -20px 40px rgba(0, 0, 0, 0.15);
-    background: rgba(255, 255, 255, 0.6);
-    -webkit-backdrop-filter: saturate(150%) blur(30rpx);
-    backdrop-filter: saturate(150%) blur(30rpx);
+.catalog-frame>._insert{
+    border-radius: 10px 10px 0 0;
+    box-shadow: 0 -20px 40px rgba(0, 0, 0, 0.15);
+    background: rgba(255, 255, 255, 0.95);
+    -webkit-backdrop-filter: saturate(150%) blur(20rpx);
+    backdrop-filter: saturate(150%) blur(20rpx);
 }
 .catalog-frame>._insert.android{
     background: rgba(255, 255, 255, 0.9);
