--- a/pages/tabBar/mine/mine.wxml
+++ b/pages/tabBar/mine/mine.wxml
@@ -1,5 +1,3 @@
-<wu-loading id="wu-loading"></wu-loading>
-<wu-toast id="wu-toast"></wu-toast>
 <wxs src="./mine.wxs" module="moduleMine" />
 
 <view capture-bind:touchstart="frameTouchStart" capture-bind:touchend="frameTouchEnd" wx:if="{{isLogin}}">
@@ -12,20 +10,20 @@
   <scroll-view scroll-y class="mine-scroll"
                scroll-with-animation
                bindscroll="pointFixScrollEvent"
-               bindscrolltolower="scrolltolowerEvent"
+               bindscrolltolower="scrollToLowerEvent"
                scroll-top="{{scroll.scrollTop}}">
 
 
     <view class="mine-hasinfo">
 
         <!-- 扫描登录 -->
-        <view class="showed" bindtap="getCodeEvent" wx:if="{{userInfo.intState===1}}">
+        <view class="showed" bindtap="getCodeEvent" style="top: {{statusBarHeight + 2}}px;" wx:if="{{userInfo.state===1}}">
           <text class="iconfont icon-saomiao"></text>
           <text class="font-10">登录网页版</text>
         </view>
 
         <!-- 编辑个人封面 -->
-        <view class="covered" bindtap="editCoverEvent" wx:if="{{userInfo.intState===1}}">
+        <view class="covered" bindtap="editCoverEvent" wx:if="{{userInfo.state===1}}">
           <text class="iconfont icon-xiangji"></text>
         </view>
 
@@ -33,32 +31,32 @@
         <view class="relative mine-top-box">
 
           <view class="uerinfo">
-            <navigator class="avatar" url="/pages/apply/mine/user-page/user-page?id={{userInfo.UserID}}">
+            <navigator class="avatar" url="/pages/apply/mine/user-page/user-page?id={{userInfo.user_id}}">
               <image src="{{userInfo.avatar_url}}" class="avatar-img"></image>
             </navigator>
             <view class="nickname">
-              <text>{{userInfo.Caption}}</text>
-              <view class="_edit _o" bindtap="profileEvent" wx:if="{{userInfo.intState===1}}"><text class="iconfont icon-bianji"></text></view>
+              <text>{{userInfo.caption}}</text>
+              <view class="_edit _o" bindtap="profileEvent" wx:if="{{userInfo.state===1}}"><text class="iconfont icon-bianji"></text></view>
               <view class="_edit" bindtap="profileEvent" wx:else>[完善资料]</view>
             </view>
-            <!--<view class="pcount"><text>{{userInfo.pCount}}</text> 积分</view>-->
+            <!--<view class="pcount"><text>{{userInfo.point}}</text> 积分</view>-->
           </view>
 
           <view class="userdata flex around">
             <navigator class="dataone" url="/pages/apply/mine/my-course/my-course">
-              <text class="user-num">{{userInfo.eCount}}</text>
+              <text class="user-num">{{userInfo.enroll_count}}</text>
               <text class="user-font">资源库</text>
             </navigator>
             <navigator class="dataone" url="/pages/apply/mine/my-collect/my-collect">
-              <text class="user-num">{{userInfo.fCount}}</text>
+              <text class="user-num">{{userInfo.favor_count}}</text>
               <text class="user-font">收藏</text>
             </navigator>
             <navigator class="dataone" bindtap="getTicketEvent">
-              <text class="user-num">{{userInfo.sCount}}</text>
+              <text class="user-num">{{userInfo.msg_count}}</text>
               <text class="user-font">课程券</text>
             </navigator>
             <navigator class="dataone" url="/pages/apply/mine/my-message/my-message">
-              <text class="user-num {{userInfo.msgCount>0?'red':''}}">{{userInfo.msgCount}}</text>
+              <text class="user-num {{userInfo.msgCount>0?'red':''}}">{{userInfo.msg_count}}</text>
               <text class="user-font">未读消息</text>
             </navigator>
           </view>
@@ -68,7 +66,7 @@
               <text class='iconfont icon-xuexi'></text>
               <view class="item-text">学习小组</view>
             </view>
-            <button class="event-hover-class shareBtn" open-type="share" plain id="appShare">
+            <button class="shareBtn item" hover-class="basic-hover" open-type="share" plain id="appShare">
               <text class='iconfont icon-chakantiezifenxiang'></text>
               <view class="item-text">分享应用</view>
             </button>
@@ -96,45 +94,44 @@
               <view class="_l">我公开的作品</view>
               <view class="_r" hover-class="event-hover-class-view" bindtap="goMineAllRecordEvent">作品管理 <text class="iconfont icon-zuo"></text></view>
             </view>
-            <block wx:if="{{record.list.length>0}}">
-              <view class="mine-userRecord-b">
-                <view wx:for="{{record.list}}" class="mine-userRecord-single {{tryParams.isPlay && tryParams.id === item.RecordID?'active':''}}" wx:key="{{item.RecordID}}">
 
-                  <navigator url="/pages/apply/mine/record-play/record-play?id={{item.RecordID}}" class="_linkto">
-                    <view class="_name">{{item.Name}}</view>
-                    <view class="_desc">{{item.Desc}}</view>
-                  </navigator>
+            <view class="mine-userRecord-b" wx:if="{{content.list.length>0}}">
+                  <view wx:for="{{content.list}}" class="mine-userRecord-single {{tryParams.isPlay && tryParams.id === item.record_id?'active':''}}" wx:key="record_id">
+                        <navigator url="/pages/apply/mine/record-play/record-play?id={{item.record_id}}" class="_linkto">
+                          <view class="_name">{{item.name}}</view>
+                          <view class="_desc">{{item.desc}}</view>
+                        </navigator>
+                        <view class="bs-single" bindtap="tryListenEvent" data-id="{{item.record_id}}" data-url="{{item.file_url}}">
+                          <view class="_insert">
+                            <view class="_image {{tryParams.isPlay && tryParams.id === item.record_id?'active':''}}">
+                              <view><image src="{{item.cover_url}}" mode="aspectFill" lazy-load/></view>
+                              <text class="iconfont icon-bofang" wx:if="{{!tryParams.isPlay || tryParams.id !== item.record_id}}"></text>
+                              <text class="iconfont icon-weibiaoti519" wx:else></text>
+                            </view>
+                          </view>
+                        </view>
+                        <text class="_time">{{moduleMine.resolveTime(item.add_time)}}</text>
+                        <view class="_oper">
+                            <view class="_eye">
+                              <view wx:if="{{item.mode === 1}}"><text class="iconfont icon-biyan"></text> 背诵</view>
+                              <view wx:else><text class="iconfont icon-yanjing"></text> 朗诵</view>
+                            </view>
+                            <view class="_d">
+                              <view class="_s"><text class="_font">{{item.view_count}}次浏览</text></view>
+                              <view class="_s"><text class="iconfont icon-zan"></text><text class="_font">{{item.like_count}}</text></view>
+                              <view class="_s" hover-class="event-hover-class-view" bindtap="singleShareEvent" data-index="{{index}}">
+                                <text class="iconfont icon-chakantiezifenxiang"></text>
+                              </view>
+                            </view>
+                        </view>
+                  </view>
 
-                  <view class="bs-single" bindtap="tryListenEvent" data-index="{{index}}">
-                    <view class="_insert">
-                      <view class="_image {{tryParams.isPlay && tryParams.id === item.RecordID?'active':''}}">
-                        <view><image src="{{item.CoverURL}}" mode="aspectFill" lazy-load/></view>
-                        <text class="iconfont icon-bofang" wx:if="{{!tryParams.isPlay || tryParams.id !== item.RecordID}}"></text>
-                        <text class="iconfont icon-weibiaoti519" wx:else></text>
-                      </view>
-                    </view>
-                  </view>
-                  <text class="_time">{{moduleMine.resolveTime(item.AddTime)}}</text>
-                  <view class="_oper">
-                    <view class="_d">
-                      <view class="_s"><text class="_font">{{item.viewCount}}次浏览</text></view>
-                      <view class="_s"><text class="iconfont icon-zan"></text><text class="_font">{{item.likeCount}}</text></view>
-                      <view class="shareBtn _s" hover-class="event-hover-class-view" bindtap="singleShareEvent" data-index="{{index}}"><text class="iconfont icon-chakantiezifenxiang"></text></view>
-                    </view>
-                  </view>
-                  <view class="_eye">
-                      <view wx:if="{{item.mode === 1}}"><text class="iconfont icon-biyan"></text> 背诵</view>
-                      <view wx:else><text class="iconfont icon-yanjing"></text> 朗诵</view>
-                  </view>
-                </view>
+                  <view wx:if="{{content.lastPage}}" class="norecord">额，数据到底了</view>
+            </view>
 
-                <view wx:if="{{record.lastPage}}" class="norecord">额，数据到底了</view>
-              </view>
-            </block>
-          <view wx:else class="norecord pt-15">还没有发布作品哟，快去 <text>作品管理</text> 点击发布</view>
+            <view wx:else class="norecord pt-15">还没有发布作品哟，快去 <text>作品管理</text> 点击发布</view>
 
         </view>
-
     </view>
 
   </scroll-view>
